<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.myapplication.SecurityCheckMapTrailsActivity" >

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </WebView>

    <ImageButton
        android:id="@+id/center_on_current_point"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        />

    <View
        android:id="@+id/anchors"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@android:color/transparent"
        />

    <LinearLayout
        android:id="@+id/ll_checkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_80dp"
        android:visibility="gone"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
        android:text = "检查时长"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:text = "00:00:00"/>

    </LinearLayout>
    <Button
        android:id="@+id/stop_check"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/anchors"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="40dp"
        android:text="@string/stop_check"
        android:background="@drawable/bg_security_check_btn"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/add_problem"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/anchors"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_security_check_btn"
        android:text="@string/add_problem"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/start_check"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_security_check_btn"
        android:text="@string/start_check"
        />

</RelativeLayout>