<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_me_myself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/me_bar"
        android:fitsSystemWindows="true"
        android:paddingBottom="@dimen/padding_30"
        android:paddingLeft="@dimen/padding_15"
        android:paddingTop="@dimen/padding_60">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_me_photo"
            android:layout_width="@dimen/padding_60"
            android:layout_height="@dimen/padding_60"
            android:src="@mipmap/me_photo"
            app:civ_border_color="#fff"
            app:civ_border_overlay="false"
            app:civ_border_width="0dp" />
        <TextView
            android:id="@+id/tv_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_15"
            android:maxLines="1"
            android:text="姓名"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintBottom_toTopOf="@id/tv_person_address"
            app:layout_constraintLeft_toRightOf="@+id/iv_me_photo"
            app:layout_constraintTop_toTopOf="@id/iv_me_photo"

            />

        <TextView
            android:id="@+id/tv_person_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_3"
            android:layout_marginLeft="@dimen/padding_15"
            android:layout_marginTop="@dimen/padding_10"
            android:maxLines="1"
            android:text="职位"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_13"
            app:layout_constraintBottom_toBottomOf="@id/iv_me_photo"
            app:layout_constraintLeft_toRightOf="@+id/iv_me_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_person_name" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f8f8f8"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_me_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_password"
                    android:text="@string/me_password" />

                <ImageView
                    style="@style/me_function_arrow"
                    android:src="@mipmap/me_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10"
                android:background="@color/transparent" />

            <RelativeLayout
                android:id="@+id/rl_me_message_ring"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white">

                <TextView
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_message"
                    android:text="@string/me_message_sound" />

                <CheckBox
                    android:id="@+id/cb_me_switcher_ring"
                    style="@style/me_function_arrow"
                    android:background="@drawable/switcher_selector"
                    android:button="@null"
                    android:checked="true" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10"
                android:background="@color/transparent" />
            <RelativeLayout
                android:id="@+id/rl_allow_screenshot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white">

                <TextView
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_message"
                    android:text="禁止截屏" />

                <CheckBox
                    android:id="@+id/cb_screenshot_ring"
                    style="@style/me_function_arrow"
                    android:background="@drawable/switcher_selector"
                    android:button="@null"
                    android:checked="false" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10"
                android:background="@color/transparent" />
            <RelativeLayout
                android:id="@+id/rl_me_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:id="@+id/tv_me_update"
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_update"
                    android:text="@string/me_update" />

                <ImageView
                    android:id="@+id/iv_me_red_pot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/padding_2"
                    android:layout_marginTop="@dimen/padding_15"
                    android:layout_toRightOf="@id/tv_me_update"
                    android:visibility="gone"
                    android:src="@mipmap/me_red_pot" />

                <TextView
                    android:id="@+id/tv_me_version"
                    style="@style/me_function_arrow"
                    android:text="当前版本V:1"
                    android:textColor="#999999" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10"
                android:background="@color/transparent" />


            <RelativeLayout
                android:id="@+id/rl_me_clear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_clear"
                    android:text="@string/me_swipe_data" />

                <ImageView
                    style="@style/me_function_arrow"
                    android:src="@mipmap/me_right_arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_map_down"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white"
                android:visibility="gone"
                android:clickable="true">

                <TextView
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_clear"
                    android:text="@string/me_map_down" />

                <ImageView
                    style="@style/me_function_arrow"
                    android:src="@mipmap/me_right_arrow" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10"
                android:background="@color/transparent" />


            <RelativeLayout
                android:id="@+id/rl_me_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_50"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    style="@style/me_function_text_style"
                    android:drawableLeft="@mipmap/me_logout"
                    android:text="@string/me_logout" />

                <ImageView
                    style="@style/me_function_arrow"
                    android:src="@mipmap/me_right_arrow" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_10"
                android:background="@color/transparent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
